# abaco

./: .env.example  .gitignore  abaco.spec  babel.cfg  build.sh  main.py  pyproject.toml  requirements.txt  settings.toml  wsgi.py  yfinance.ipynb
abaco/: __init__.py  api.py  cache.py  classes.py  config.py  configuration.py  constants.py  database.py  dataframes.py  functions.py  localization.py  models.py  utils.py  webscraping.py  yfinance.py
abaco/blueprints/api/: api.py
abaco/blueprints/web/: __init__.py  web.py
abaco/pages/: dashboard.py  negociacoes.py  wallets.py
abaco/schemas/: database.json
abaco/static/js/: abaco.js
abaco/templates/: base.html.jinja  hello.html.jinja  index.html  index.html.jinja  welcome.html  welcome.html.jinja
abaco/translations/: messages.pot
abaco/translations/en_US/LC_MESSAGES/: messages.po
abaco/translations/pt_BR/LC_MESSAGES/: messages.po
alembic/: env.py
alembic/versions/: 12ec0c78fed0_negociacoes.py  7ee0bfffcd1d_create_wallet_table.py
data/: wallet.ods
notebooks/: dashboard.ipynb  yfinance.ipynb
