[tool.poetry]
name = "abaco"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["William Sampaio <56176702+WilliamSampaio@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyinstaller = "^6.0.0"
tinydb = "^4.8.0"
dynaconf = "^3.2.3"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue . && isort ."
exec = "task lint && python main.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
