[tool.poetry]
authors = ["William Sampaio <56176702+WilliamSampaio@users.noreply.github.com>"]
description = ""
license = "MIT"
name = "abaco"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
flask = "^2.3.3"
flask-babel = "^3.1.0"
flaskwebgui = "^1.0.6"
gunicorn = "^21.2.0"
pyautogui = "^0.9.54"
pyinstaller = "^6.0.0"
python = ">=3.11,<3.13"
schema = "^0.7.5"
tinydb = "^4.8.0"
waitress = "^2.1.2"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
faker = "^19.6.2"
isort = "^5.12.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"

[tool.isort]
line_length = 79
profile = "black"

[tool.taskipy.tasks]
babel_compile = "pybabel compile -d abaco/translations"
babel_extract = "pybabel extract -F babel.cfg -o abaco/translations/messages.pot ."
babel_init = "pybabel init -i abaco/translations/messages.pot -d abaco/translations -l"
babel_init_all = "task babel_init en_US && task babel_init pt_BR"
babel_update = "pybabel update -i abaco/translations/messages.pot -d abaco/translations"
build = "task lint && task babel_compile && pyinstaller --clean abaco.spec"
lint = "blue . && isort ."
run = "task lint && flask run"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
