[tool.poetry]
authors = ["William Sampaio <56176702+WilliamSampaio@users.noreply.github.com>"]
description = ""
license = "MIT"
name = "abaco"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "^1.13.1"
beautifulsoup4 = "^4.12.3"
dynaconf = "^3.2.5"
lxml = "^5.2.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
plotly-express = "^0.4.1"
python = ">=3.11,<3.13"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"
streamlit = "^1.34.0"
tabulate = "^0.9.0"
tinydb = "^4.8.0"
yfinance = "^0.2.40"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
faker = "^19.6.2"
ipykernel = "^6.29.4"
isort = "^5.12.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"

[tool.isort]
line_length = 79
profile = "black"

[tool.taskipy.tasks]
freeze = "poetry export --output=requirements.txt"
lint = "blue . && isort ."
migrate = "alembic upgrade head"
run = "task lint && task migrate && streamlit run main.py"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
